fixing some spacing issues among the products made but the javascript and flip css

--- a/css/main.css
+++ b/css/main.css
@@ -213,7 +213,7 @@ align-items: center;
 
 .flip-container, .front, .back {
 	width: 240px;
-	height: 400px;
+	height: 250px;
 }
 
 /* flip speed goes here */
